调整代码